# api-trecho-ai

./: .gitignore  DESIGN.md  pyproject.toml  requirements.txt
alembic/: env.py
src/: __init__.py  main.py
src/Controllers/: AuthController.py  DashboardController.py  FrotaController.py  PessoasController.py  ViagensController.py  ViewController.py  WhatsappController.py  abastecimento_controller.py  auth_controller.py  dashboard_controller.py  fornecedor_controller.py  frota_controller.py  ordem_servico_controller.py  pessoas_controller.py  pneu_controller.py  viagens_controller.py  whatsapp_controller.py
src/DataContexts/: DatabaseContext.py
src/Dtos/: MotoristaDto.py  VeiculoDto.py  ViagemDto.py  __init__.py  abastecimento_dto.py  auth_dto.py  dashboard_dto.py  fornecedor_dto.py  frota_dto.py  ordem_servico_dto.py  pneu_dto.py  viagem_dto.py  whatsapp_dto.py
src/Exceptions/: ExceptionHandlers.py
src/Models/: Abastecimento.py  Cavalo.py  DespesaViagem.py  Fornecedor.py  HistoricoHodometro.py  Implemento.py  MensagemChat.py  Motorista.py  MotoristaPerfil.py  OrdemServico.py  Pneu.py  PneuMovimentacao.py  ReceitaViagem.py  Sessao.py  SharedModels.py  Usuario.py  Veiculo.py  Viagem.py  __init__.py  base_models.py  despesa_viagem.py  historico_hodometro.py  mensagem_chat.py  motorista_perfil.py  ordem_servico.py  pneu_movimentacao.py  receita_viagem.py  shared_models.py  viagem_implemento.py
src/Services/: ApiClients.py  AuthService.py  DashboardService.py  FrotaService.py  PessoasService.py  ViagensService.py  WhatsappService.py  __init__.py  auth_service.py  (+9 more)
(+17 files in other folders)
